# downloader-rs

./: .gitignore  Cargo.toml
example/: package.json
example/file/: main.js  package.json
example/src/: App.jsx
example/web/: package.json
example/web/src/: App.css
examples/: config.json
examples/downloader_v1/: Cargo.toml
examples/downloader_v1/src/downloader/: chunk_iterator.rs  chunk_manager.rs
src/: cli.rs  downloader.rs  downloader_build.rs  error.rs  main.rs  utils.rs
src/api/: mod.rs
src/download/: archiver.rs  chunk_item.rs  chunk_iterator.rs  chunk_manager.rs  chunk_range.rs  config.rs  download_task.rs  downloader.rs  error.rs  logger.rs  mod.rs  persistence.rs  scheduler.rs  util.rs
src/downloader/: chunk_info.rs  chunk_item.rs  chunk_iterator.rs  chunk_manager.rs  chunk_range.rs  download_config.rs  download_way.rs  downloader.rs  error.rs  exclusive.rs  mod.rs  util.rs
src/extension/: breakpoint_resume.rs  mod.rs  speed_tracker.rs
src/task/: archive_data.rs  mod.rs  progress_bar.rs  task.rs  task_manager.rs
