[package]
name = "downloader-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "gzip", "json"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "signal", "sync", "macros"] }
anyhow = "1"
futures-util = "0.3"
dirs = "5"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4", "serde"] }
dashmap = "6.1.0"
async-channel = "2.3.1"
